# vintage-kvm

./: .gitignore  Cargo.toml
.cargo/: config.toml
crates/protocol/: Cargo.toml
crates/protocol/src/: block_server.rs  block_source.rs  cap.rs  crc.rs  lib.rs
crates/protocol/src/packet/: commands.rs  crc16.rs  crc32.rs  mod.rs
crates/ps2-framer/: Cargo.toml
crates/ps2-framer/src/: classifier.rs  framer.rs  lib.rs  packer.rs
crates/ps2-framer/tests/: at_frame.rs  classifier.rs  packer.rs
crates/signatures/: Cargo.toml
crates/signatures/src/: lib.rs
crates/telemetry-schema/: Cargo.toml
crates/telemetry-schema/src/: lib.rs
docs/: aishell_design.md  design.md  firmware_crate_and_trait_design.md  hardware_reference.md  ieee1284_controller_reference.md  implementation_plan.md  instrumentation_surface.md  pico_firmware_design.md  pico_phase3_design.md  pio_state_machines_design.md  ps2_eras_reference.md  ps2_private_channel_design.md  stage0_design.md  stage1_design.md  stage1_implementation.md  two_plane_transport.md  usb_interface_design.md
dos/: Makefile
dos/pico1284/: pico1284.asm
dos/stage0/: lpt_nibble.inc  s0_at.asm  s0_atps2_core.inc  s0_ps2.asm  s0_xt.asm
dos/stage1/: stage1.asm
firmware/: Cargo.toml  build.rs
firmware/.cargo/: config.toml
firmware/src/: crc_sniffer.rs  irqs.rs  lifecycle.rs  main.rs  packet_stream.rs
firmware/src/lpt/: byte.rs  compat.rs  ecp.rs  epp.rs  hardware.rs  mod.rs  mux.rs  negotiator.rs  pio_byte_rev.rs  pio_compat_in.rs  pio_dir_follower.rs  pio_ecp.rs  pio_epp.rs  pio_nibble_out.rs  ring_dma.rs
firmware/src/packet/: crc16.rs  crc32.rs  mod.rs
firmware/src/protocol/: block_server.rs  cap.rs  mod.rs  stage_blobs.rs
firmware/src/ps2/: aux_oversampler.rs  framer.rs  injector.rs  mod.rs  mouse_input.rs  oversampler.rs  ring_dma.rs  scancode.rs  supervisor.rs  tx.rs  tx_kbd.rs
firmware/src/status/: animations.rs  heartbeat.rs  mod.rs  neopixel.rs
firmware/src/telemetry/: defmt_emit.rs  mod.rs  multi.rs  noop.rs
firmware/src/transport/: lpt.rs  mod.rs  packet_stream.rs
firmware/src/usb/: bulk.rs  console.rs  control.rs  events.rs  mod.rs
firmware/src/util/: mod.rs
hardware/: README.md
host/: README.md
tools/: README.md
tools/control-client/: Cargo.toml
tools/control-client/src/: main.rs
tools/events-consumer/: Cargo.toml
tools/events-consumer/src/: event.rs  main.rs
