[workspace]
resolver = "3"
members = [
    "crates/protocol",
    "crates/ps2-framer",
    "crates/signatures",
    "crates/telemetry-schema",
    "firmware",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

# Shared deps used across both the firmware (no_std cortex-m) and the
# pure-logic shared crates. Specific feature flags are picked per consumer.
[workspace.dependencies]
defmt = "1.0.1"
heapless = { version = "0.8", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 1
overflow-checks = true
