[package]
name = "vintage-kvm-firmware"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Pico1284 / vintage-kvm RP2350 firmware (Raspberry Pi Pico 2)"

[dependencies]
embassy-rp = { version = "0.10.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.5.1", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-futures = "0.1.2"
embassy-usb = { version = "0.6.0", default-features = false, features = ["defmt"] }

# Static-init helper for the USB stack's long-lived buffers.
static_cell = "2.1"

# COBS-framed postcard serializer for the events-CDC wire format.
postcard = { version = "1", default-features = false }

heapless = { workspace = true }

vintage-kvm-protocol = { path = "../crates/protocol", features = ["defmt"] }
vintage-kvm-ps2-framer = { path = "../crates/ps2-framer", features = ["defmt"] }
vintage-kvm-telemetry-schema = { path = "../crates/telemetry-schema", features = ["defmt", "serde"] }
vintage-kvm-signatures = { path = "../crates/signatures", features = ["defmt"] }

defmt = { workspace = true }
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

# WS2812 RGB8 type used by embassy-rp's PioWs2812 driver.
smart-leds = { version = "0.4", default-features = false }

# PIO program assembly + fixed-point clkdiv math (both already in
# embassy-rp's dep graph; named explicitly here so our own PIO programs
# can call into them).
pio = { version = "0.3", default-features = false }
fixed = { version = "1.28", default-features = false }
