[package]
name = "vintage-kvm-telemetry-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "vintage-kvm CDC telemetry JSON-line event schema. Shared between firmware emitter and host TUI consumer."

[features]
default = []
defmt = ["dep:defmt"]
serde = ["dep:serde"]

[dependencies]
defmt = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

# No serde_json dev-dep — host TUI parses JSON via its own
# Deserialize-capable mirror (see lib.rs feature note).
