[package]
name = "vintage-kvm-control-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Host-side CLI for the vintage-kvm `control` CDC ACM RPC channel — one-shot verb invocations from a shell."

[[bin]]
name = "control-client"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serialport = { version = "4", default-features = false, features = ["usbportinfo-interface"] }
