[package]
name = "vintage-kvm-events-consumer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Host-side reader for the vintage-kvm `events` CDC ACM stream — decodes postcard+COBS frames and prints them."

[[bin]]
name = "events-consumer"
path = "src/main.rs"

[dependencies]
anyhow = "1"
postcard = { version = "1", features = ["use-std"] }
serde = { version = "1", features = ["derive"] }
serialport = { version = "4", default-features = false }
